--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,8 @@ dependencies:
   intl: ^0.17.0
   percent_indicator: ^4.2.3
   font_awesome_flutter: ^10.4.0
+  response: ^1.0.0
+  ikchatbot: ^1.0.5
 
 dev_dependencies:
   flutter_test:
